--- a/index.html
+++ b/index.html
@@ -21,5 +21,34 @@
 
     </div>
 
+    <div class="hero">
+        <div class="hero-left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="hero-right">
+            <img src="https://images.pexels.com/photos/6031340/pexels-photo-6031340.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
+        </div>
+
+    </div>
+
+    <div class="information">
+        <h1>Some Information</h1>
+        <div class="pair">
+
+        </div>
+        <div class="pair">
+
+        </div>
+        <div class="pair">
+
+        </div>
+        <div class="pair">
+            
+        </div>
+
+    </div>
+
 </body>
 </html>
