Almost finished, just need to add the quote attribution

--- a/index.html
+++ b/index.html
@@ -35,19 +35,44 @@
 
     <div class="information">
         <h1>Some Information</h1>
-        <div class="pair">
-
+        <div class="icons">
+            <div class="pair">
+                <div></div>
+                <p>Here a pretty neat icon</p>
+            </div>
+            <div class="pair">
+                <div></div>
+                <p>This icon is iconic!</p>
+            </div>
+            <div class="pair">
+                <div></div>
+                <p>wait a sec.. this icon looks like the last two</p>
+            </div>
+            <div class="pair">
+                <div></div>
+                <p>alright this is just getting redundant</p>
+            </div>
         </div>
-        <div class="pair">
+    </div>
 
-        </div>
-        <div class="pair">
+    <div class="quotebox">
+        <p>This is an inspiring quote, or testimonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  Who knows?  All I know is that it looks nice.</p>
+    </div>
 
+    <div class="action">
+        <div class="call">
+            <div class="call-left">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there</p>
+            </div>
+            <div class="call-right">
+                <button>Sign up</button>
+            </div>    
         </div>
-        <div class="pair">
-            
-        </div>
+    </div>
 
+    <div class="footer">
+        <p>Copyright The Odin Project 2021</p>
     </div>
 
 </body>
