--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
     <div class="quotebox">
         <p>This is an inspiring quote, or testimonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  Who knows?  All I know is that it looks nice.</p>
+        <h2>-Thor, God of Thunder</h5>
     </div>
 
     <div class="action">
